# anon-coordination

./: README.md
core/: Nargo.toml
core/crates/attestation/: Nargo.toml  Prover.toml
core/crates/attestation/src/: main.nr
core/crates/identity/: Nargo.toml  Prover.toml
core/crates/identity/src/: main.nr
core/crates/jwt_identity/: Nargo.toml
core/crates/jwt_identity/src/: main.nr
doc/: System.md
server/: Cargo.toml
server/src/: main.rs
